--- a/plugin.properties
+++ b/plugin.properties
@@ -18,3 +18,4 @@ plugin.brand=Dolteng Eclipse Plugin
 
 openPagePair.label=Open Page Pair
 openActionPair.label=Open Action Pair
+createService.label=Create Service
