--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -47,6 +47,7 @@ COLUMN_JAVA_CLASS=Class Name
 COLUMN_FIELD_NAME=Field Name
 PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
+PREFERENCE_USE_PAGE_MARKER=Use Page Marker
 PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
 PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
 PREFERENCE_DEFAULT_DTO_PKG=Default Dto Package
