--- a/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -3,7 +3,8 @@ bin.includes = plugin.xml,\
                dolteng-core.jar,\
                plugin.properties,\
                plugin_ja.properties,\
-               template/
+               template/,\
+               icons/
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/
 src.includes = plugin.properties,\
@@ -12,4 +13,5 @@ src.includes = plugin.properties,\
                META-INF/,\
                src/main/java/,\
                src/main/resources/,\
-               template/
+               template/,\
+               icons/
