--- a/plugin.properties
+++ b/plugin.properties
@@ -19,3 +19,5 @@ plugin.brand=Dolteng Eclipse Plugin
 openPagePair.label=Open Page Pair
 openActionPair.label=Open Action Pair
 createService.label=Create Service
+openDaoPair.label=Open Dao Pair
+openEntityPair.label=Open Entity Pair
