--- a/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java142"/>
 	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
 	<classpathentry kind="lib" path="template/jars/aopalliance-1.0.jar"/>
 	<classpathentry sourcepath="template/jars/sources/commons-logging-1.0.4-src.zip" kind="lib" path="template/jars/commons-logging-1.0.4.jar"/>
@@ -16,7 +16,6 @@
 	<classpathentry kind="lib" path="template/jars/ognl-2.6.7.jar"/>
 	<classpathentry kind="lib" path="template/jars/poi-2.5.1-final-20040804.jar"/>
 	<classpathentry kind="lib" path="template/jars/geronimo-j2ee_1.4_spec-1.0.jar"/>
-	<classpathentry kind="lib" path="template/jars/commons-el-1.0.jar"/>
 	<classpathentry sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip" kind="lib" path="template/jars/fuzzyxml-0.0.9.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
 	<classpathentry kind="lib" path="template/jars/freemarker-2.3.8.jar"/>
